fixed css code 2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </nav>
       <h1 class="header__title title">no focus</h1>
       <h2 class="header__subtitle title-decor">Что делать, когда не можешь делать ничего
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</h2>
+        <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</h2>
       <span class="decoration-element" aria-hidden="true"></span>
     </header>
     <main class="main">
