--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="section">
-        <h2 class="section__title">Что снижает концентрацию внимания?</h2>
+        <h2 class="section__title">Что снижает концентрацию <br>внимания?</h2>
         <div class="section__content section__span">
           <div>
             <h3 class="title-decor">Многозадачность</h3>
