--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section class="section">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="section__content">
-          <div>
+          <div class="card__content">
             <h3 class="title-decor">Многозадачность</h3>
             <p class="section__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. 
               Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. 
@@ -59,7 +59,7 @@
               А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». 
               Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
           </div>
-          <div>
+          <div class="card__content">
             <h3 class="title-decor">Дофамин</h3>
             <p class="section__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. 
               Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. 
@@ -70,15 +70,15 @@
       <section class="section">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__content section__span">
-          <div>
+          <div class="card__content">
             <h3 class="title-decor">Многозадачность</h3>
             <p class="section__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
           </div>
-          <div>
+          <div class="card__content">
             <h3 class="title-decor">Еда</h3>
             <p class="section__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
           </div>
-          <div>
+          <div class="card__content">
             <h3 class="title-decor">Гаджеты</h3>
             <p class="section__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
           </div>
@@ -88,23 +88,23 @@
         <h2 class="section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="section__content">
           <h3 class="title-decor title-decor__margin">5 простых (на самом деле не очень) советов</h3>
-          <div>
+          <div class="card__content">
             <h4 class="title-decor">Представьте небо и облака</h4>
             <p class="section__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
           </div>
-          <div>
+          <div class="card__content">
             <h4 class="title-decor">Включите музыку</h4>
             <p class="section__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
           </div>
-          <div>
+          <div class="card__content">
             <h4 class="title-decor">Прогуляйтесь</h4>
             <p class="section__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="section__link" target="_blank" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
           </div>
-          <div>
+          <div class="card__content">
             <h4 class="title-decor">Хорошо ешьте</h4>
             <p class="section__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
           </div>
-          <div>
+          <div class="card__content">
             <h4 class="title-decor">Читайте</h4>
             <p class="section__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
           </div>
